arches_for_science/media/css/project.css
/* ... */
.xy-reader .select2-container{
    width: auto !important;
}

.workbench-button-panel {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    width: 100%;
    background-color: #fafafa;
    border-top: 1px solid #ddd;
}

.workbench-button-panel button {
    width: 48%;
}
.workbench-button-panel button span {
    padding-left: 4px;
}

.tabbed-workflow .object-search-step {
    margin: unset;
}

.object-search-step {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.workflow-search-panel {
    background-color: #f3f3f3;
    border-bottom: #ddd solid 1px;
    padding: 10px 60px;
    display: inline-flex;
    align-items: center;
}

.tabbed-workflow-step-body .workflow-search-panel {
    padding-left: 22px;
}

.workflow-search-panel .search-bar {
    width: 600px;
}

.workflow-search-count {
    display: inline-flex;
    padding-left: 15px;
    justify-content: center;
    font-size: 16px;
    color: #888;
}

.workflow-search-count .count-number {
    font-weight: 600;
    color: #004577;
    padding-right: 5px;
}

.child-exclusion {
    display: inline-flex;
    flex-direction: row;
    justify-content: center;
    margin-left: 10px;
}

.child-exclusion .toggle-container {
    padding-bottom: 0px;
    display: inline-flex;
}

.child-exclusion .toggle-container .arches-toggle-sm {
    margin: 0;
    color: #888;
}

.child-exclusion .toggle-container .arches-toggle-subtitle {
    display: none;
}

.object-search-step .search-results-footer {
    height: 55px;
    background-color: #f3f3f3;
    bottom: 53px;
    align-items: center;
    justify-content: space-around;
    border-top: 1px solid #ddd;
    display: flex;
    flex-direction: column;
    width: 100%
}

.tabbed-workflow-step-body .object-search-step .search-results-footer {
    bottom: 0px;
}

.object-search-step .wf-multi-tile-step-list {
    /* border-left: 0px; */
    background-color: #f9f9f9;
}

.object-search-step .search-selection-controls {
    padding: 11px;
    display: inline-flex;
    justify-content: flex-start;
    background-color: #f3f3f3;
    /* border-top: solid 1px #ddd; */
    position: absolute;
    bottom: 0px;
    width: 100%;
}

.workflow-search-results {
    height: calc(100% - 59px);
}

.workflow-search-results-full-container {
    display: inline-flex;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    overflow-y: hidden;
}

.workflow-search-list-container {
    position: relative;
    display:flex;
    flex-direction: column;
    width: 100%;
}

.workflow-search-list {
    display:flex;
    flex-direction: column;
    width: 100%;
    overflow-y: auto;
}

.workflow-search-list .search-result-item {
    border: 1px solid #ddd;
    margin: 10px;
    padding: 10px;
}

.object-search-step .selected-instance {
    background-color: #eff7f9;
    border: 1px solid #2783d4;
}

.tabbed-workflow-step-body .wf-multi-tile-step-list {
    padding-bottom: 60px !important;  /* overwrites manual style setting */
}

.workflow-search-list .search-result-item:hover {
    cursor: pointer;
}

.wf-multi-tile-btn-complete {
    position: absolute;
    bottom: 305px;
    right: 100px;
    font-weight: 800;
}

.wf-multi-tile-card-info-details {
    max-width: calc(100%);
    white-space: nowrap;
    overflow: hidden;
}

.wf-multi-tile-card-info-details dd {
    text-overflow: ellipsis;
    overflow: hidden;
}

.model-summary-report {
    background: #fff;
    padding: 0px 30px 30px 30px;
}

.summary-report-title {
    color: rgb(13, 59, 99);
    font-size: 17px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.summary-report-link {
    float: right;
    color: #1576EB;
}

.summary-report-subtitle {
    font-size: 14px;
    margin-bottom: 5px;
    color: #888;
}

.subtitle-category {
    color: rgb(13, 59, 99);
}

.subtitle-value a {
    color: #1576EB;
    font-size: 14px;
}

.subtitle-value-blank {
    color: #777;
}

.summary-report-description {
    font-size: 14px;
    color: #888;
    margin-bottom: 10px;
    line-height: 1.4;
}

.object-search-step .summary-report-description {
    max-width: 75vw;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.summary-report-manifests {
    margin-bottom: 10px;
    font-size: 14px;
    color: #888;
}

.summary-report-manifest-title {
    margin-bottom: 5px;
    margin-top: 5px;
}

.summary-report-canvas {
    max-height: 150px;
    margin-right: 5px;
    margin-bottom: 5px;
    border: 1px solid #454545;
}

.summary-report-related-panel {
    color: #888;
}

.summary-report-related {
    font-size: 16px;
    font-weight: 500;
    color: rgb(13, 59, 99);
    padding-top: 10px;
}

.summary-report-related-panel .subtitle-value {
    display: inline-grid;
}

.summary-report-related-list {
    color:rgb(6, 119, 218);
}

.summary-report-editor-button {
    float: right;
    padding-top: 30px;
}

.upload-dataset-related-widget {
    padding: 16px;
    margin-bottom: 20px;
}

.thematic-report-container {
    width: 100%;
    height: inherit;
}

.thematic-report-container .scroll-y {
    height: calc(100vh - 50px);
}

.thematic-report-container .resource-report {
    height: 100%;
}

.thematic-report-container #footer {
    display: none !important;
}

.thematic-report-container .rp-report-container-preview  {
    height: 100%;
    display: flex;
    flex-direction: column;
    margin: unset !important;
    padding: unset !important;
}

.thematic-report-container .toggle-container {
    padding: unset;
}

.thematic-nav-tab-container {
    overflow-x: scroll;
    position: relative;
    min-height: 40px;
}

.thematic-nav-tab-list {
    padding: 0px 10px 0px 10px;
    background-color: #fafafa;
    display: flex;
    min-width: max-content;
    position: absolute;
}

.thematic-nav-tab-list-item {
    display: flex !important; /* override navs.less */
    align-items: center;
}

.thematic-nav-tab {
    min-width: 220px;
    padding: 10px 20px;
    border-left: 1px solid #ddd;
    cursor: pointer;
}
/* ... */

